samples/_failures_safe/1761418232_b13f05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff8336d4.c: In function ‘main’:
./samples/SAFE/__tmp_ff8336d4.c:149:9: error: expected expression at end of input
  149 |         for (size_t j = 0; j <
      |         ^~~
./samples/SAFE/__tmp_ff8336d4.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff8336d4.c:149:9: error: expected declaration or statement at end of input
